--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 </head>
 <body>
   <div id="app">
-    <!-- 絞り込みラジオボタン -->
-    <!-- ToDo テーブル -->
-    <!-- 新規登録フォーム -->
+    <table>
+      <thead>
+        <tr>
+          <th class="id">ID</th>
+          <th class="commnet">コメント</th>
+          <th class="state">状態</th>
+          <th class="button">-</th>
+        </tr>
+      </thead>
+    </table>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <script src="main.js"></script>
