--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <th>{{ item.id }}</th>
           <td>{{ item.comment }}</td>
           <td class="state">
-            <button>{{ item.state }}</button>
+            <button v-on:click="doChangeState(item)">
+              {{ item.state }}
+            </button>
           </td>
           <td class="button">
             <button>削除</button>
