--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </button>
           </td>
           <td class="button">
-            <button>削除</button>
+            <button v-on:click="doRemove(item)">
+              削除
+            </button>
           </td>
         </tr>
       </tbody>
