--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <div id="app">
+    <label v-for="label in options">
+      <input type="radio" v-model="current" v-bind:value="label.value">{{ label.label }}
+    </label>
+    ({{ computedTodos.length }} 件を表示中)
     <table>
       <thead>
         <tr>
@@ -17,7 +21,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="item in todos" v-bind:key="item.id">
+        <tr v-for="item in computedTodos" v-bind:key="item.id">
           <th>{{ item.id }}</th>
           <td>{{ item.comment }}</td>
           <td class="state">
